# vulkan_boilerplate

./: CMakeLists.txt  Makefile  compile_commands.json
.cache/clangd/index/: aabb2d.h.FF011B964E2BC1D0.idx  affine-mat.h.0DFAA4D1B1E6CDDD.idx  affine-post.h.650257D53B4C89F7.idx  affine-pre.h.7C58957CF106DFB0.idx  affine.h.22A4C0114F5B55C0.idx  affine.h.6454155374A64A3C.idx  affine2d-post.h.C9E727C8C69274DC.idx  affine2d.h.3C2C864618F52160.idx  bezier.h.F8278E6CE243F3A0.idx  box.h.324ED4EE44D3C1B4.idx  cam.h.A3CE9FA1AA5767F2.idx  cglm.h.7D16606BF9C60071.idx  color.h.8B5B73BD41DDD0F8.idx  common.h.A2BA18E7CAD00015.idx  curve.h.3847E426C4F84549.idx  ease.h.53E28BBD2A758140.idx  euler.h.63C2BB09E31C3CAA.idx  euler_to_quat_rh.h.1FFC75C5424D535E.idx  frustum.h.69A8DF52DD005E4F.idx  glfw3.h.42A8C93B385A8E40.idx  intrin.h.FC1C837758E9911A.idx  io.h.F7B12EF4EF3DF7CE.idx  ivec2.h.C87111CFBFF710D7.idx  ivec3.h.9FA0C4FC4FA51DD0.idx  ivec4.h.B8AC83F0F7C13E3E.idx  main.c.2C4C7B113E594D41.idx  main.c.F637F3019179106B.idx  mat2.h.4A462B3B84A95801.idx  mat2.h.95C39C8899C4F95A.idx  mat2x3.h.C3D377AA394E0DCC.idx  mat2x4.h.EF3DD448D31A9616.idx  mat3.h.3A21BBC42DBB1AEC.idx  mat3.h.505D1DF0E3FB89C0.idx  mat3x2.h.936C95628E99C61A.idx  mat3x4.h.52113459AA91DCB1.idx  mat4.h.02AE66EE0BAC7C6F.idx  mat4.h.CD5EB9DF99A5164A.idx  mat4x2.h.E0227C5F339CD645.idx  mat4x3.h.DE47D70A9F36487A.idx  noise.h.846934FE857C7170.idx  (+38 more)
include/: triangle.h  window_init.h
src/: main.c  triangle.c  window_init.c
